--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,12 +101,6 @@ img.pic {
     
 }
 
-p.pic {
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 0px;
-}
-
 p.foot {
     color: #CCCCCC;
     font-family: Arial, Helvetica, sans-serif;
@@ -143,8 +137,16 @@ Ul {
     padding: 0px;
 }
 
-ul.right {
-    left: 0px;
+ul.check {
+    left: 50%;
+    right: 50%;
+}
+
+ul.sample {
+    position: relative;
+    margin: 0 auto;
+    left: 50%;
+    right: 50%;
 }
 
 li {
@@ -153,4 +155,32 @@ li {
 
 div.container-fluid {
     padding-left: 20px;
+}
+
+img.sample {
+    max-width: 250px;
+    max-height: 250px;
+    min-width: 250px;
+    min-height: 250px;
+}
+
+div.yes {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+div.please {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    top: 80%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #4aaaa5;
+    width: 100%;
 }
