--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,3 +184,38 @@ div.please {
     background-color: #4aaaa5;
     width: 100%;
 }
+
+h3.black {
+    color: #000000;
+    padding-bottom: 0px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0 auto;
+    left: 0px;
+    text-align: left;
+}
+
+input.data {
+    width: 90%;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+input.entry {
+    width: 90%;
+    margin-right: 20px;
+    margin-left: 20px;
+    height: 300px;
+}
+
+input.button {
+    background-color: #4aaaa5;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #ffffff;
+    font-weight: bolder;
+    border: 0;
+    padding: 20px;
+}
